--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <article>
     <div class="envelope-container">
       <div class="message message-1" id="message-1">
-        <h1>Happy Valentine's Day!</h1>
+        <h1>Happy New Year!</h1>
         <p>Sending a little something for you...</p>
       </div>
       <div class="message message-2" id="message-2">
-        <h2>Lots of love!</h2>
+        <h2>Lots of love and manifestations!</h2>
       </div>
       <button class="close-btn" id="close-btn" onclick="toggleEnvelope()">close envelope</button>
       <button class="heart-btn" id="heart-btn" onclick="toggleEnvelope()">&#10084;
